# pikit

./: .env.example  .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml
api/: index.html
api/agent/: index.html
api/attacks/: index.html
api/base/: index.html
api/channels/: index.html
api/craft/: index.html
api/datasets/: index.html
api/defenses/: index.html
api/detection/: index.html
api/judge/: index.html
api/matrix/: index.html
api/registry/: index.html
api/targets/: index.html
cli/: index.html
concepts/: index.html
datasets/: agentdojo.toml  direct_injection.toml  index.html  indirect_injection.toml  injecagent.toml
demos/: README.md  config.example.toml  experiment.example.toml  index.html  run.py
demos/06_live_matrix/: README.md  _common.py  run_all.py  test_agents_live.py  test_attacks_live.py  test_channels_live.py  test_defenses_live.py
demos/configs/: browser_webpage.toml  coding_skills.toml  email_exfil.toml
demos/live_matrix/: README.md  _common.py  run_all.py  test_agents_live.py  test_attacks_live.py  test_channels_live.py  test_defenses_live.py
demos/samples/: mail.eml
docs/: cli.md  concepts.md  datasets.md  demos.md  extending.md  index.md  installation.md  license.md  quickstart.md  references.md  terminology.md
docs/api/: agent.md  attacks.md  base.md  channels.md  craft.md  datasets.md  defenses.md  detection.md  index.md  judge.md  matrix.md  registry.md  targets.md
docs/guide/: agents.md  attacks.md  batch.md  channels.md  craft.md  defenses.md  index.md  targets.md
docs/tutorials/: agent_testbed.md  defending.md  direct_injection.md  index.md  indirect_injection.md  notebooks.md
extending/: index.html
guide/: index.html
guide/agents/: index.html
guide/attacks/: index.html
guide/batch/: index.html
guide/channels/: index.html
guide/craft/: index.html
guide/defenses/: index.html
guide/targets/: index.html
installation/: index.html
license/: index.html
pikit/: __init__.py  _compat.py  base.py  cli.py  config.py  craft.py  judge.py  matrix.py  registry.py
pikit/agent/: __init__.py  base.py  builtin_tools.py  chat_agent.py  hooks.py  loop.py  samples.py  system_prompt.py  tool_agent.py  tools.py
pikit/attacks/: __init__.py  combined.py  context_flooding.py  naive.py  (+10 more)
quickstart/: index.html
references/: index.html
search/: search_index.json
site/: 404.html  index.html  objects.inv  sitemap.xml
terminology/: index.html
tests/: test_agent.py  test_attacks.py  test_attacks_new.py  test_channels.py  test_cli.py  test_craft.py  test_datasets.py  test_defenses.py  test_defenses_new.py  test_detection.py  test_file_mode.py  test_judge.py  test_matrix.py  test_new_agents.py  test_registry.py  test_simulation_realism.py  test_tool_pool.py
tutorial/: 01_getting_started.ipynb  02_attacks.ipynb  03_channels_indirect.ipynb  04_defenses.ipynb  05_agent_testbed.ipynb  06_judges_and_matrix.ipynb  07_datasets.ipynb  README.md
tutorials/: index.html
(+99 files in other folders)
